--- a/src/components/studentRegistrations/StudentForm.css
+++ b/src/components/studentRegistrations/StudentForm.css
@@ -8,7 +8,8 @@
   border-radius: 4px black solid;
   box-shadow: 0 4px 6px rgba(78, 78, 79, 0.1);
   transition: background-color 0.5s ease-in;
-  margin-top: 120px;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 /* Title styling */
